# SparkleProjectTemplate

./: CMakeLists.txt
src/: main.cpp
